fix: fixing css spacing

--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,16 @@ body{
 
 #titleContainer{
   color: white;
-  margin: 50px 0;
+  padding: 0px 20%;
 }
 
 #titleLogo{
+  margin-top:30px;
   max-width: 200px;
 }
 
 #signatureContainer{
-  padding: 20px;
+  padding: 50px 20px;
   border-radius: 8px;
   background-color: white;
 }
